# RubiksCube

./: .gitignore  CMakeLists.txt  Node.cpp  Node.h  Piece.cpp  Piece.h  RubiksCube.cpp  RubiksCube.h  Utils.cpp  Utils.h  main.cpp
